--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>Mis trabajos de HTML</title>
 	</head>
 	<body style="background-color:pink;"> 
+		<h1>Hola soy Alejandro </h1>
 		<h1>Mis trabajos de HTML</h1>
 		<h1><a href="ACTIVIDAD1.html">Práctica 1</a></h1>	
 		<h1><a href="Errores.html">Práctica 2</a></h1>
