--- a/Pagina1.html
+++ b/Pagina1.html
@@ -3,6 +3,6 @@
 </head>
 <body>
 <h1>Página principal.</h1>
-<a href="pagina2.html">Noticias</a>
+<a href="Pagina2.html">Noticias</a>
 </body>
 </html>
