--- a/Propuesto2.html
+++ b/Propuesto2.html
@@ -4,5 +4,7 @@
 <body>
 <a href="Cultura.html">Cultura</a>
 <a href="Deportes3.html">Deportes3</a>
+  <a href="http://www.elpais.com">El Pais</a>
+ <a href="mailto:juanancaravaca@gmail.com">Sugerencias a un correo electrónico. </a>
 </body>
 </html>
