--- a/Propuesto2.html
+++ b/Propuesto2.html
@@ -2,9 +2,9 @@
 <head>
 </head>
 <body>
-<a href="Cultura.html">Cultura</a>
-<a href="Deportes3.html">Deportes3</a>
-  <a href="http://www.elpais.com">El Pais</a>
- <a href="mailto:juanancaravaca@gmail.com">Sugerencias a un correo electrónico. </a>
+  <h1><a href="Cultura.html">Cultura</a></h1>
+  <h1><a href="Deportes3.html">Deportes3</a></h1>
+  <h1><a href="http://www.elpais.com">El Pais</a></h1>
+  <h1><a href="mailto:juanancaravaca@gmail.com">Sugerencias a un correo electrónico. </a></h1>
 </body>
 </html>
