--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<h1><a href="Berners-Lee-Wikipedia.html">Práctica 3</a></h1>
 		<h1><a href="Pagina1.html">Práctica 4</a></h1>
 		<h1><a href="Propuesto2.html">Práctica 5</a></h1>
+		<h1><a href="Propuesto3.html">Práctica 6</a></h1>
 		
 	</body>
 
