--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<h1><a href="Propuesto3.html">Práctica 6</a></h1>
 		<h1><a href="Propuesto4.html">Práctica 7</a></h1>
 		<h1><a href="Propuesto5.html">Práctica 8</a></h1>
+		<h1><a href="Propuesto6.html">Práctica 9</a></h1>
 	</body>
 
 </html>
